@@ -12,7 +12,9 @@ import vltest_bootstrap
 test.scenarios('vlt')
 test.top_filename = "t/t_flag_main.v"
 
-test.lint(verilator_flags2=["--binary -E --dpi-hdr-only --lint-only --xml-only --json-only -Wall"],
+test.lint(verilator_flags2=[
+    "-Wno-DEPRECATED --binary -E --dpi-hdr-only --lint-only --xml-only --json-only -Wall"
+],
           fails=True,
           expect_filename=test.golden_filename)
 
