@@ -12,9 +12,10 @@ import vltest_bootstrap
 test.scenarios('vlt')
 test.top_filename = "t/t_flag_main.v"
 
-test.lint(
-    verilator_flags2=["--build -E -Wno-fatal --dpi-hdr-only --lint-only --xml-only --json-only"],
-    fails=True,
-    expect_filename=test.golden_filename)
+test.lint(verilator_flags2=[
+    "-Wno-DEPRECATED --build -E -Wno-fatal --dpi-hdr-only --lint-only --xml-only --json-only"
+],
+          fails=True,
+          expect_filename=test.golden_filename)
 
 test.passes()
