@@ -14,7 +14,7 @@ test.top_filename = "t/t_xml_first.v"
 
 out_filename = test.obj_dir + "/V" + test.name + ".xml"
 
-test.compile(verilator_flags2=['--no-std', '--xml-only', '--flatten'],
+test.compile(verilator_flags2=['--no-std', '-Wno-DEPRECATED --xml-only', '--flatten'],
              verilator_make_gmake=False,
              make_top_shell=False,
              make_main=False)
